[package]
name = "openhttpa-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Attested Agent Mesh for secure AI agent communication"

[dependencies]
openhttpa-proto = { workspace = true }
openhttpa-tee   = { workspace = true }
openhttpa-crypto = { workspace = true }
openhttpa-attestation = { workspace = true }
openhttpa-headers = { workspace = true }
openhttpa-mcp = { workspace = true }
openhttpa-transport = { workspace = true }
openhttpa-client = { workspace = true }
openhttpa-core = { workspace = true }
http         = { workspace = true }
axum         = { workspace = true }
bytes        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
dashmap      = { workspace = true }
uuid         = { workspace = true, features = ["v4", "serde"] }
tokio        = { workspace = true }
regorus      = "0.2"
hex          = { workspace = true }
postcard     = { workspace = true }
async-trait = "0.1.89"

[dev-dependencies]
openhttpa-tee = { workspace = true }
tracing-subscriber = "0.3"
rand = "0.8"
