[package]
name = "openhttpa-oracle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openhttpa-proto = { path = "../openhttpa-proto" }
openhttpa-tee = { path = "../openhttpa-tee" }
openhttpa-zk = { path = "../openhttpa-zk" }
openhttpa-core = { path = "../openhttpa-core" }
openhttpa-server = { path = "../openhttpa-server" }
openhttpa-client = { path = "../openhttpa-client" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
serde = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls-webpki-roots"], default-features = false }
thiserror = { workspace = true }
bytes = { workspace = true }
bincode = "1.3.3"
serde-big-array = "0.5"
tracing-subscriber = { workspace = true }
axum.workspace = true
openhttpa-attestation.workspace = true
openhttpa-crypto.workspace = true
tower-http = "0.6.10"
serde_json.workspace = true
getrandom = { workspace = true }

[dev-dependencies]
axum.workspace = true
tokio = { workspace = true }
wiremock = "0.6.5"
