[package]
name = "openhttpa-oracle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openhttpa-proto = { workspace = true }
openhttpa-tee = { workspace = true }
openhttpa-zk = { workspace = true }
openhttpa-core = { workspace = true }
openhttpa-server = { workspace = true }
openhttpa-client = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
serde = { workspace = true }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
thiserror = { workspace = true }
bytes = { workspace = true }
bincode = "1.3.3"
serde-big-array = "0.5"
tracing-subscriber = { workspace = true }
axum.workspace = true
openhttpa-attestation.workspace = true
openhttpa-crypto.workspace = true
tower-http = "0.6.11"
serde_json.workspace = true
getrandom = { workspace = true }

[dev-dependencies]
axum.workspace = true
tokio = { workspace = true }
wiremock = "0.6.5"
