[package]
name        = "openhttpa-server"
description = "OpenHTTPA — Axum-based server SDK (AtHS + AtSP + TrR handlers)"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
openhttpa-proto        = { workspace = true }
openhttpa-crypto       = { workspace = true }
openhttpa-headers      = { workspace = true }
openhttpa-core         = { workspace = true }
openhttpa-attestation  = { workspace = true }
openhttpa-tee          = { workspace = true }
bytes               = { workspace = true }
http                = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
thiserror           = { workspace = true }
tracing             = { workspace = true }
tokio               = { workspace = true }
async-trait         = { workspace = true }
axum                = { workspace = true, features = ["ws"] }
tower               = { workspace = true }
rand                = { workspace = true }
dashmap             = { workspace = true }
pin-project         = { workspace = true }
tokio-tungstenite = "0.29"
getrandom = "0.2"
hex               = { workspace = true }
hmac              = { workspace = true }
sha2              = { workspace = true }
futures           = { workspace = true }
bloomfilter       = { workspace = true }
redis             = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
axum  = { workspace = true, features = ["macros"] }
tempfile = "3.10"

[features]
ita = ["openhttpa-attestation/ita"]
maa = ["openhttpa-attestation/maa"]
zk = ["openhttpa-core/zk"]

[[example]]
name = "remote_attestation"
required-features = ["ita"]
