[package]
name = "openhttpa-spiffe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SPIFFE/SPIRE Workload Identity integration for OpenHTTPA"

[dependencies]
spiffe = { version = "0.16.0", features = ["workload-api-x509", "x509"] }
openhttpa-proto = { workspace = true }
openhttpa-core = { workspace = true }
openhttpa-tee = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
async-trait = "0.1"
hex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber.workspace = true
