[package]
name        = "openhttpa-tee"
description = "OpenHTTPA — TEE abstraction layer (SGX / TDX / SEV-SNP / TPM / TrustZone / Mock)"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default   = ["mock"]
zaa       = ["openhttpa-zk"]
mock      = []
sgx       = ["teaclave-sgx-sdk", "sgx_types"]
tdx       = ["tdx_attest"]
sev_snp   = ["sev"]
trustzone = ["optee-teec"]
tpm       = []
nvidia_gpu = []
aws_nitro = ["aws-nitro-enclaves-nsm-api"]

[dependencies]
openhttpa-proto = { workspace = true }
bytes        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
zeroize      = { workspace = true }
hex          = { workspace = true }
hkdf         = "0.13"
sha2         = "0.11"
bincode      = "3"
serde_bytes  = "0.11"
openhttpa-zk    = { workspace = true, optional = true, features = ["zk"] }

# SGX
teaclave-sgx-sdk = { version = "1.1", package = "sgx_ucrypto", optional = true }
sgx_types        = { version = "1.1", optional = true }

# TDX
tdx_attest = { version = "0.1.1", optional = true }

# SEV-SNP
sev = { version = "8.0.0", optional = true, features = ["snp"] }

# TrustZone (raw FFI via system libteec)
optee-teec = { version = "0.9", optional = true }

# AWS Nitro Enclaves
aws-nitro-enclaves-nsm-api = { version = "0.5.1", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
once_cell = "1"
