[package]
name = "openhttpa-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Confidential telemetry and observability for OpenHTTPA using HPKE"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["registry"] }
tracing-core = "0.1"
openhttpa-crypto = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
hpke = { workspace = true }
hex = { workspace = true }
rand = "0.9"
